# swish

./: CONTRIBUTE.md  Cargo.toml  LICENSE  Makefile.toml  README.md
.githooks/: pre-commit
.github/workflows/: test.yml
src/: client.rs  config.rs  cors.rs  entities.rs  error.rs  global.rs  header.rs  http.rs  json.rs  lib.rs  matcher.rs  parser.rs  request.rs  response.rs  router.rs  swish.rs  types.rs  validater.rs
src/body/: body.rs  error.rs  json.rs  mod.rs
src/request/: entities.rs  mod.rs  parser.rs  request.rs
src/router/: entities.rs  error.rs  handler.rs  matcher.rs  mod.rs  router.rs
src/validater/: entities.rs  error.rs  mod.rs  validater.rs
test/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  integration_test.sh
test/client/: .prettierrc  Dockerfile  cors.test.js  index.js  index.test.js  package.json
test/server/: Cargo.toml  Dockerfile  README.md
test/server/src/: cors_test.rs  main.rs  normal_test.rs  sample.rs
test/src/: main.rs
