[package]
name = "swish_swish"
version = "0.1.1"
authors = ["NoCtrlZ <phantomofrotten@gmail.com>"]
description = "Rust Web Framework With No Dependencies With Nightly Modules"
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/NoCtrlZ/swish"
repository = "https://github.com/NoCtrlZ/swish"
include = ["src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
